@@ -10,6 +10,11 @@ Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 - Fixed a crash on redefining an array inherited from the parent environment
   in a subshell.
 
+- Fixed corner case breakage of univese handling in the 'echo' command: it
+  broke when used in a namespace block before being used anywhere else, and
+  only if _AST_FEATURES was not exported first. The bug caused _AST_FEATURES to
+  be incorrectly placed in that namespace. Bug introduced on 2023-06-02.
+
 2024-03-07:
 
 - Fixed a bug that caused some systems to corrupt the display of multibyte
